[search] Fixed slider z-index problem

--- a/desktop/core/static/css/bootstrap-slider.css
+++ b/desktop/core/static/css/bootstrap-slider.css
@@ -146,3 +146,7 @@
   opacity: 1;
   filter: alpha(opacity=100);
 }
+
+.slider .tooltip {
+  z-index: 10;
+}
